--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pricewatch-backend",
-  "version": "3.2.0",
-  "description": "PriceWatch backend with RapidAPI",
+  "version": "1.0.0",
+  "description": "PriceWatch backend with link extraction",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1"
   }
 }
