--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pricewatch-backend",
   "version": "1.0.0",
-  "description": "PriceWatch backend with link extraction",
+  "description": "PriceWatch backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "axios": "^1.6.0",
+    "node-fetch": "^2.7.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1"
   }
