--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pricewatch-backend",
-  "version": "1.0.0",
-  "description": "PriceWatch backend",
+  "version": "3.2.0",
+  "description": "PriceWatch backend with RapidAPI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,8 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^2.7.0",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1"
   }
 }
